ho 32 -> 64
